--- a/slides/intro_to_r_slides.qmd
+++ b/slides/intro_to_r_slides.qmd
@@ -193,7 +193,7 @@ opts_chunk$set(
 \vspace{0.5em}
 
 \textcolor{mLightBlue}{09:15 - 10:00} \\
-Introduction, Background, Tools
+Introduction, Background, Tools, First steps with R
 \vspace{0.5em}
 
 \textcolor{mLightBlue}{10:00 - 10:15} \\
@@ -201,7 +201,7 @@ Break, support with installations
 \vspace{0.5em}
 
 \textcolor{mLightBlue}{10:15 - 11:00} \\
-Exercises, First steps with R
+Exercises, Basic Concepts
 \vspace{0.5em}
 
 \textcolor{mLightBlue}{11:00 - 11:15} \\
@@ -209,7 +209,7 @@ Break, Q\&A
 \vspace{0.5em}
 
 \textcolor{mLightBlue}{11:15 - 11:45} \\
-First steps with R, Concepts
+Exercises, Basic Concepts
 \vspace{0.5em}
 
 \end{column}
@@ -223,15 +223,15 @@ Lunch (individually)
 \vspace{0.5em}
 
 \textcolor{mLightBlue}{13:15 - 14:00} \\
-Exercises
+Working with Data
 \vspace{0.5em}
 
 \textcolor{mLightBlue}{14:00 - 14:15} \\
 Break, Q\&A
 \vspace{0.5em}
 
-\textcolor{mLightBlue}{14:15 - 15:00} \\
-Working with Data
+\textcolor{mLightBlue}{14:15 - 15:15} \\
+Exercises
 \end{column}
 \end{columns}
 
