--- a/slides/intro_to_r_slides.qmd
+++ b/slides/intro_to_r_slides.qmd
@@ -598,11 +598,11 @@ if (condition) {
 
 - Functions take \keyword{parameter values} as input, process these values, and \accenttext{return} results
 
-\vspace{0.3em}
+\vspace{0.01em}
 
 - Many functions are \highlight{provided with R}
 
-\vspace{0.3em}
+\vspace{0.01em}
 
 - Additional functions via \important{packages}
 
@@ -673,12 +673,16 @@ my_list[[1]][1:3]
 # Create a matrix
 my_matrix <- matrix(integer_vector, nrow = 4)
 my_matrix
+```
 
+### Matrices: extracting rows/columns
+
+```{r}
 my_matrix[2,]      # Second row
 my_matrix[, 1:2]   # First two columns
 ```
 
-### Data frames
+### Data frames: creation
 
 ```{r}
 # Create a dataframe
@@ -688,6 +692,11 @@ my_df <- data.frame(
 )
 
 my_df
+```
+
+### Data frames: access
+
+```{r}
 my_df$Age         # Access column
 my_df[2, ]        # Second row
 ```
@@ -1022,7 +1031,7 @@ swiss |>
 ### String manipulation with stringr
 
 ```{r}
-masters <- c("Mecon", "MiQE/F", "MACFin") # Example text
+masters <- c("Mecon", "MiQE/F", "MACFin")
 
 # String operations
 tibble(
@@ -1318,9 +1327,9 @@ modelsummary(models, output = "markdown")
 - Use `mutate()` to create two new variables:  
   - `UrbanizationRate`: the inverse of Agriculture (100 – Agriculture)  
   - `FertilityCategory`: a factor variable with levels:  
-    - 0–60 → "Low"  
-    - 60–80 → "Medium"  
-    - 80–100 → "High"  
+    - 0–60: "Low"  
+    - 60–80: "Medium"  
+    - 80–100: "High"  
 - Hint: use `case_when()` for categorization  
 
 
@@ -1370,9 +1379,9 @@ modelsummary(models, output = "markdown")
 - Create new variables:  
   - `UrbanizationRate` = 100 – Agriculture  
   - `FertilityCategory`:  
-    - 0–60 → "Low"  
-    - 60–80 → "Medium"  
-    - 80–100 → "High"  
+    - 0–60: "Low"  
+    - 60–80: "Medium"  
+    - 80–100: "High"  
 - Hint: use `cut()`  
 
 ### Exercise j.4
@@ -1425,34 +1434,38 @@ modelsummary(models, output = "markdown")
 ::: {.column width="50%"}
 \textcolor{mLightBlue}{\textbf{Online Resources:}}
 \begin{itemize}
-\item \keyword{Stack Overflow}
+\item \href{https://stackoverflow.com/collectives/r-language}{Stack Overflow}
 
 \vspace{0.3em}
 
-\item \accenttext{R for Data Science} book
+\item \href{https://r4ds.hadley.nz/}{R for Data Science book}
 
 \vspace{0.3em}
 
-\item \highlight{RStudio cheatsheets}
+\item \href{https://posit.co/resources/cheatsheets/}{Posit cheatsheets}
 
 \vspace{0.3em}
 
-\item \important{CRAN documentation}
+\item \href{https://cran.r-project.org/manuals.html}{CRAN documentation}
 \end{itemize}
 :::
 
 ::: {.column width="50%"}
 \textcolor{mAccent}{\textbf{AI Assistance:}}
 \begin{itemize}
-\item \keyword{ChatGPT}
+\item ChatGPT
 
 \vspace{0.3em}
 
-\item \accenttext{GitHub Copilot}
+\item GitHub Copilot
 
 \vspace{0.3em}
 
-\item \highlight{Google Bard}
+\item Google Gemini
+
+\vspace{0.3em}
+
+\item Claude
 
 \end{itemize}
 :::
@@ -1516,9 +1529,7 @@ Contents: Similar contents as today in slower pace. Automated reports using R-ma
 ### Survey - evaluation for introduction week
 
 
-<div style="text-align: center;">
-  ![](img/survey_qr.png){width=35%}
-</div>
+  ![](img/survey_qr.png){height=175 fig-align='center'}
 
 \begin{center}
 
